enhance gateway